@@ -37,8 +37,6 @@ RUN set -eux; \
     jar_path="$(find build/libs -maxdepth 1 -name '*.jar' ! -name '*plain.jar' | head -n 1)"; \
     cp "$jar_path" /workspace/booklore-api/app.jar
 
-FROM linuxserver/unrar:7.1.10 AS unrar-layer
-
 FROM mwader/static-ffmpeg:8.1 AS ffprobe-layer
 
 FROM scratch AS kepubify-layer-amd64
@@ -73,13 +71,15 @@ ENV JAVA_TOOL_OPTIONS="-XX:+UseShenandoahGC \
     -XX:+ExitOnOutOfMemoryError \
     --enable-native-access=ALL-UNNAMED"
 
-RUN apk add --no-cache su-exec libstdc++ libgcc && \
+RUN apk add --no-cache su-exec libstdc++ libgcc libarchive && \
     mkdir -p /bookdrop
+
+# Manually link `libarchive.so.13` so java and other libraries can see it
+RUN ln -s /usr/lib/libarchive.so.13 /usr/lib/libarchive.so
 
 COPY packaging/docker/entrypoint.sh /usr/local/bin/entrypoint.sh
 RUN chmod +x /usr/local/bin/entrypoint.sh
 
-COPY --from=unrar-layer /usr/bin/unrar-alpine /usr/local/bin/unrar
 COPY --from=ffprobe-layer /ffprobe /usr/local/bin/ffprobe
 COPY --from=kepubify-layer /kepubify /usr/local/bin/kepubify
 
@@ -105,4 +105,4 @@ ARG BOOKLORE_PORT=6060
 EXPOSE ${BOOKLORE_PORT}
 
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
-CMD ["java", "-jar", "/app/app.jar"]
+CMD ["java", "--enable-native-access=ALL-UNNAMED", "-jar", "/app/app.jar"]
